-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.2
-
None
-
MacOSX 10.10.3, Qt 5.4.2
Windows 7, Qt 5.5.0
Gentoo GNU/Linux, Qt 5.5.0,
-
0610115192f4a1e4d722330bf298ccd213ca3b5f
The QML WebSocketServer port is os type quint16. QML does not know the type quint16. The result is
>>Invalid property assignment: unsupported type "ushort"<<
Sorry I do not have a dev env up an running. The fix should be to change the property declaration to an int
>>Q_PROPERTY(quint16 port READ port WRITE setPort NOTIFY portChanged)<<
And the resulting changes (e.g. setPort, port) maybe also with a range check.
For Gerrit Dashboard: QTBUG-46790 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
121294,4 | WebSocketServer: use int type for port | 5.5 | qt/qtwebsockets | Status: MERGED | +2 | 0 |