WebSocketServer: use int type for port

QML engine doesn't support quint16 as a QML type.

Task-number: QTBUG-46790
Change-Id: I5b01dc06a3256dd41affc035fc507082e1935cc8
Reviewed-by: Venugopal Shivashankar <venugopal.shivashankar@digia.com>
Reviewed-by: Topi Reiniö <topi.reinio@digia.com>
Reviewed-by: Luca Niccoli <lultimouomo@gmail.com>
Reviewed-by: Simon Hausmann <simon.hausmann@theqtcompany.com>