tests/auto/qml/qmlwebsockets/tst_qmlwebsockets.qml
@@ -44,6 +44,7 @@ Rectangle {
 
     WebSocketServer {
         id: server
+        port: 1337
     }
 
     WebSocket {
